--- a/cp_animate.css
+++ b/cp_animate.css
@@ -6,8 +6,8 @@
    Tutorial Case
 
    Cinema Penguin Styles for Animation
-   Author: 
-   Date:   
+   Author: Diego Sandoval
+   Date:   1/24/2019
 
    Filename: cp_animate.css
 
@@ -25,6 +25,3 @@
 
 
 /* Animation Icon Styles */
-
-
-
