--- a/cp_media.css
+++ b/cp_media.css
@@ -6,8 +6,8 @@
    Tutorial Case
 
    Cinema Penguin Styles for Media
-   Author: 
-   Date:   
+   Author: Diego Sandoval
+   Date:   1/24/2019
 
    Filename: cp_media.css
 
@@ -18,5 +18,3 @@
 
 
 /* Track Styles */
-
-
